--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <script src="figures.js"></script>
     <script src="utils.js"></script>
     <script src="drag.js"></script>
-    <script src="test.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
