--- a/index.html
+++ b/index.html
@@ -7,6 +7,75 @@
         * {
             margin: 0;
             padding: 0;
+            text-decoration: none;
+            vertical-align: middle;
+            font-size: 1rem;
+            font-weight: 400;
+            color: #000;
+        }
+
+        header {
+            height: 40px;
+            background-color: #fff;
+            align-items: center;
+            border: 0px;
+        }
+
+        .btn {
+            background-color: #0d6efd;
+            border-color: #0d6efd;
+
+            font-size: 1rem;
+            font-weight: 400;
+            color: #fff;
+
+            line-height: 1.5;
+            border-width: 1px;
+            border-color: transparent;
+            border-radius: 0.375rem;
+            padding: 0.2rem 0.6rem;
+
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+            display: inline-block;
+            text-align: center;
+            text-decoration: none;
+            vertical-align: middle;
+            cursor: pointer;
+            margin: 5px;
+        }
+
+        .btn:hover {
+            background-color: #0b5ed7;
+            border-color: #0a58ca;
+        }
+
+        .btn-cancel {
+            background-color: #6c757d;
+            border-color: #6c757d;
+
+            line-height: 1.5;
+            border-width: 1px;
+            border-color: transparent;
+            border-radius: 0.375rem;
+            padding: 0.2rem 0.6rem;
+
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+            display: inline-block;
+
+            text-align: center;
+            text-decoration: none;
+            vertical-align: middle;
+            font-size: 1rem;
+            font-weight: 400;
+            color: #fff;
+
+            cursor: pointer;
+            margin: 5px;
+        }
+
+        .btn-cancel:hover {
+            background-color: #5c636a;
+            border-color: #565e64;
         }
 
         #content {
@@ -18,84 +87,89 @@
 
         #canvas {
             border: 1px solid black;
-            width: 80%;
+            width: auto;
+            height: auto;
         }
 
-        #volumes {
-            border: 1px solid black;
-            display: block;
-        }
-
-        #volumes button {
-            margin: 10px;
-        }
-
-        #labels {
-            border: 1px solid black;
-            border-collapse: collapse;
+        .table {
             width: 100%;
+            margin-bottom: 1rem;
+            color: #fff;
+            vertical-align: top;
+            border-color: #dee2e6;
+            caption-side: bottom;
+            border-collapse: collapse;
         }
 
-        #labels tr {
-            border: 1px solid black;
+        .table>:not(caption)>*>* {
+            color: #fff;
+            padding: 0.5rem 0.5rem;
+            background-color: #212529;
+            border-bottom-width: 1px;
+            box-shadow: inset 0 0 0 9999px transparent;
         }
 
-        #labels td {
-            border: 1px solid gray;
+        .table td {
+            color: #000;
+            padding: 0.5rem 0.5rem;
+            background-color: #fff;
+            box-shadow: inset 0 0 0 9999px transparent;
+            text-align: center;
         }
 
-        #labels th {
-            border: 1px solid #000000;
-            /* text-align: left; */
-            /* padding: 8px; */
+        .table tr {
+            border-bottom-color: #111;
+            border-bottom-width: 1px;
         }
 
-        /* The Modal (background) */
         .modal {
             display: none;
-            /* Hidden by default */
             position: fixed;
-            /* Stay in place */
             z-index: 1;
-            /* Sit on top */
             left: 0;
             top: 0;
             width: 100%;
-            /* Full width */
             height: 100%;
-            /* Full height */
             overflow: auto;
-            /* Enable scroll if needed */
-            background-color: rgb(0, 0, 0);
-            /* Fallback color */
             background-color: rgba(0, 0, 0, 0.4);
-            /* Black w/ opacity */
         }
 
-        /* Modal Content/Box */
         .modal-content {
             background-color: #fefefe;
             margin: 15% auto;
-            /* 15% from the top and centered */
             padding: 20px;
             border: 1px solid #888;
-            width: 80%;
-            /* Could be more or less, depending on screen size */
+            width: 50%;
         }
 
-        label {
-            border: 1px solid black;
-            display: inline-block;
+        .modal-header {
+            display: flex;
+            flex-shrink: 0;
+            align-items: center;
+            justify-content: space-between;
+            padding: 1rem 1rem;
+        }
+
+        h5 {
+            font-size: 1.25rem;
+            font-weight: 500;
         }
     </style>
     <title>Labeler</title>
 </head>
 
 <body>
-    <!-- Модальное окно -->
-    <div id="myModal" class="modal">
-        <!-- Контент модального окна -->
+    <header>
+        <button class="btn" id="selector">Выбрать</button>
+        <button class="btn" id="edit">Редактировать</button>
+        <button class="btn" id="drawRect">Прямоугольник</button>
+        <button class="btn" id="saveLabels">Сохранить</button>
+    </header>
+    <div id="myModal" class="modal" tabindex="-1">
         <div class="modal-content">
+            <div class="modal-header">
+                <h5>Выбор класса</h5>
+            </div>
             <div>
                 <label>Выберете существующий класс</label>
                 <select id="class_selector">
@@ -103,41 +177,43 @@
                 </select>
             </div>
             <div>
-                <label>Введите название класса</label>
+                <label>Введите название нового класса</label>
                 <input id="class_name" type="text">
                 <label>Выберете цвет для класса</label>
                 <input id="color_input" type="color">
             </div>
-            <input id="apply_label_button" type="button" value="Применить">
-            <input id="discard_label_button" type="button" value="Отменить">
+            <button class="btn" id="apply_label_button">Применить</button>
+            <button class="btn-cancel" id="discard_label_button">Отменить</button>
         </div>
     </div>
     <div id="content">
-        <div id="volumes">
-            <button id="selector">Selector</button>
-            <button id="edit">Edit</button>
-            <button id="drawRect">Draw Rect</button>
-        </div>
         <canvas id="canvas" tabindex='1'></canvas>
-        <table id="labels">
-            <tr>
-                <th>label</th>
-                <th>x1</th>
-                <th>y1</th>
-                <th>w</th>
-                <th>h</th>
-                <th>color</th>
-            </tr>
+        <table class="table" id="table">
+            <thead>
+                <tr>
+                    <th>label</th>
+                    <th>x1</th>
+                    <th>y1</th>
+                    <th>w</th>
+                    <th>h</th>
+                    <th>color</th>
+                </tr>
+            </thead>
+            <tbody id="labels">
+
+            </tbody>
         </table>
     </div>
-    <div>
+    <footer>
         <label id="x_pos"></label>
         <label id="y_pos"></label>
         <label id="x"></label>
         <label id="y"></label>
         <label id="w"></label>
         <label id="h"></label>
-    </div>
+
+    </footer>
+
     <script src="src/m3.js"></script>
     <script src="src/twgl-full.min.js"></script>
     <script src="shaders.js"></script>
