--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 <body>
     <header>
-        <button class="btn" id="selector">Выбрать</button>
+        <button class="btn" id="selector">Навигация</button>
         <button class="btn" id="edit">Редактировать</button>
         <button class="btn" id="drawRect">Прямоугольник</button>
         <button class="btn" id="saveLabels">Сохранить</button>
