--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             font-weight: 500;
         }
     </style>
-    <title>Labeler</title>
+    <title>Citizen labeler</title>
 </head>
 
 <body>
@@ -175,7 +175,7 @@
         <button class="btn" id="edit">Редактировать</button>
         <button class="btn" id="drawRect">Контур</button>
         <button class="btn" id="saveLabels">Сохранить</button>
-        <button class="btn" id="resetCamera">Сброс камеры</button>
+        <button class="btn" id="resetCamera">Подогнать изображение</button>
     </header>
     <div id="myModal" class="modal" tabindex="-1">
         <div class="modal-content">
